Bug 458267 - When inviting a user, the invitee is not being highlighted
Summary: When inviting a user, the invitee is not being highlighted
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-24 18:14 UTC by Jan Bidler
Modified: 2022-11-10 20:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-08-24 18:14:08 UTC
SUMMARY
When inviting a user, the invitee is not being highlighted, but the inviter is


STEPS TO REPRODUCE
1. Invite a user (i.e. "Alice") to a room of your choice

OBSERVED RESULT
A message with `<[you](clickable link)> invited Alice into the room` appears. The Alice is not clickable, it appears as plain text

EXPECTED RESULT
A message with `<[you](clickable link)> invited [Alice](clickable link) into the room` should appear. This time, Alice is clickable, and clicking it should bring up Alice's profile

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5
NeoChat: self compiled flatpak
Comment 1 Bug Janitor Service 2022-11-10 19:11:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/602
Comment 2 Tobias Fella 2022-11-10 20:19:35 UTC
Git commit 962a1b228cd0582c33357cd0656eb67135749ce6 by Tobias Fella.
Committed on 10/11/2022 at 20:15.
Pushed by tfella into branch 'master'.

Highlight other party in state events

M  +2    -0    src/neochatroom.cpp
M  +1    -1    src/qml/Component/Timeline/StateDelegate.qml

https://invent.kde.org/network/neochat/commit/962a1b228cd0582c33357cd0656eb67135749ce6