Highlight other party in state events

BUG: 458267