src/qml/Component/Timeline/StateDelegate.qml
@@ -99,7 +99,7 @@ Control {
                 wrapMode: Text.WordWrap
                 textFormat: Text.RichText
                 text: `<style>a {text-decoration: none;}</style><a href="https://matrix.to/#/${author.id}" style="color: ${author.color}">${currentRoom.htmlSafeMemberName(author.id)}</a> ${aggregateDisplay}`
-                onLinkActivated: userDetailDialog.createObject(ApplicationWindow.overlay, {room: currentRoom, user: author.object, displayName: author.displayName, avatarMediaId: author.avatarMediaId, avatarUrl: author.avatarUrl}).open()
+                onLinkActivated: RoomManager.openResource(link)
             }
         }
     }
